# NLP-Hackathon-Image-to-recipe

./: .gitignore  README.md  UI_PLAN.md  issues.md  main.py  pyproject.toml  train.ipynb
.github/prompts/: speckit.constitution.prompt.md
.specify/: tasks.md
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/specs/: dish_to_recipe_improvement.md
.specify/specs/001-task-2/: tasks.md
.specify/workflows/: workflow-registry.json
checkpoints/: best_model.pt
data/: paired_dataset.json
docs/: future_plans.md
helper_scripts/: download_full_data.py  download_isia500.py  fix_paths.py  merge_train_val.py  merger.py  recipe_download.py  splitter.py
notebooks/: train.ipynb
notebooks/phase1/: train.ipynb
notebooks/phase2/: data_creator.ipynb  data_creator_keyword.ipynb  train.ipynb
specs/001-task-2/: plan.md  tasks.md
ui/src/: app.py
ui/static/: index.html
