[project]
name = "hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.4",
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.8",
    "open-clip-torch>=3.3.0",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "sentencepiece>=0.2.1",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "transformers>=5.7.0",
]
